--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ a {
     max-width: 36rem;
 }
 
-section{
+/* SPACE BETWEEN SECTIONS  */
+/* section{
     margin-bottom: 80%;
-}
+} */
 
 .sideBar {
    font-size: 0.9rem;
@@ -79,4 +80,10 @@ section{
 
 .sideBar a:hover {
     text-decoration: underline
+}
+
+.socialLinks {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 10px;
 }
