--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@
 html{
     line-height: 1.5;
     tab-size: 4;
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: 'JetBrains Mono', monospace;
     font-size: 16px;
-    margin-left: 32px;
-    margin-top: 70px;
+    margin: 70px auto;
+    max-width: 1100px;
 }
 
 h1 {
@@ -39,11 +40,31 @@ h2 {
 a {
     text-decoration: none;
     color: inherit;
+    position: relative;
+}
+
+/* STILL HAVE TO MODIFY THE ANIMATION
+    DEBUG -> dOUBLE LINE ON links
+*/
+
+a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0%;
+    height: 1px;
+    background: currentColor;
+    transition: width 0.3 ease;
+}
+
+a:hover::after{
+    width: 100%;
 }
 
 .container {
     display: grid;
-    grid-template-columns: 180px 1fr;
+    grid-template-columns: 190px 1fr;
     column-gap: 60px;
     max-width: 1000px;
 }
@@ -52,15 +73,14 @@ a {
     max-width: 36rem;
 }
 
-/* SPACE BETWEEN SECTIONS  */
-/* section{
-    margin-bottom: 80%;
-} */
-
 .sideBar {
    font-size: 0.9rem;
    border-right: 2px solid #ddd;
    padding-right: 40px;
+   margin-left: 33px;
+   position: sticky;
+   top: 70px;
+   height: fit-content;
 }
 
 .sideBar p {
@@ -76,10 +96,6 @@ a {
 
 .sideBar li {
     margin-bottom: 8px;
-}
-
-.sideBar a:hover {
-    text-decoration: underline
 }
 
 .socialLinks {
