--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @font-face {
     font-family: 'JetBrains Mono';
     src: url('./fonts/JetBrainsMono-Regular.woff2') format('woff2');
@@ -46,8 +50,19 @@ a {
 /* STILL HAVE TO MODIFY THE ANIMATION
     DEBUG -> dOUBLE LINE ON links
 */
-
 a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0%;
+    height: 2px;
+    background: currentColor;
+    transition: width var(--transition);
+    border-radius: 2px;
+}
+
+li a::after{
     content: '';
     position: absolute;
     left: 0;
@@ -55,7 +70,8 @@ a::after{
     width: 0%;
     height: 1px;
     background: currentColor;
-    transition: width 0.3 ease;
+    transition: width var(--transition);
+    border-radius: 1px;
 }
 
 a:hover::after{
