--- a/style.css
+++ b/style.css
@@ -47,22 +47,7 @@ a {
     position: relative;
 }
 
-/* STILL HAVE TO MODIFY THE ANIMATION
-    DEBUG -> dOUBLE LINE ON links
-*/
 a::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    width: 0%;
-    height: 2px;
-    background: currentColor;
-    transition: width var(--transition);
-    border-radius: 2px;
-}
-
-li a::after{
     content: '';
     position: absolute;
     left: 0;
@@ -72,6 +57,15 @@ li a::after{
     background: currentColor;
     transition: width var(--transition);
     border-radius: 1px;
+}
+
+a.boldLink:hover{
+    font-weight: bold;
+}
+
+a.boldLink::after{
+    height: 2px;
+    border-radius: 2px;
 }
 
 a:hover::after{
